About Page Initial

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,25 @@
 <div class="content about-content">
   <div class="center-stage">
     <h1>About</h1>
+    <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
+  </div>
+  <div class="content-wrapper center-stage">
+    <p>     
+    I am a frontend developer with full stack experience by profession and I am an artist and designer by passion. As a
+    developer I mostly work on web and Javascript currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology 
+    stack. I love creating my own designs and open source components and always keep me involved in proof of concepts and 
+    projects on latest technologies.<br/><br/>
+    
+    Designing has always been with me even before I started loving technology. I use to design products as well along with
+    portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful and 
+    accessible.
+    </p>
+    <nav>
+      <ul class="site-nav-list">
+        <li class="show">MY SKILLS</li>
+        <li class="show">WORK EXPERIENCE</li>
+        <li class="show">TIMELINE</li>
+      </ul>
+    </nav>
   </div>
 </div>
