--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
       <h2>Projects</h2>
       <div class="alpha-initial-bg">w</div>
       <div class="underline"></div>
-      <button>VIEW PROJECTS</button>
+      <button routerLink="/projects">VIEW PROJECTS</button>
     </div>
     <div class="overview-content-wrapper">
       <div class="overview-content">
@@ -40,7 +40,7 @@
       <h2>About</h2>
       <div class="alpha-initial-bg">A</div>
       <div class="underline"></div>
-      <button>ABOUT ME</button>
+      <button routerLink="/about">ABOUT ME</button>
     </div>
     <div class="overview-content-wrapper">
       <div class="overview-content">
@@ -52,7 +52,7 @@
       <h2>Contact</h2>
       <div class="alpha-initial-bg">C</div>
       <div class="underline"></div>
-      <button>CONTACT ME</button>
+      <button routerLink="/contact">CONTACT ME</button>
     </div>
     <div class="overview-content-wrapper">
       <div class="overview-content">
