--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -24,7 +24,12 @@ ul {
     padding: 0;
     list-style: none;
 }
-
+p {
+    line-height: 2em;
+    letter-spacing: 0.05em;
+    padding: 0 0.5em;
+    text-align: justify;
+}
 .clearfix:before,
 .clearfix:after {
     content: '';
@@ -43,6 +48,38 @@ button {
     letter-spacing: 4px;
 }
 /* Button Styles - End */
+
+/* Nav Style - Start*/
+ul.site-nav-list {
+    list-style: none;
+    width: 100%;
+    height: 10em;
+    margin: 0 auto;
+    padding: 5em 0 2em;
+    transition: all 0.5s ease-in;
+}
+
+ul.site-nav-list li {
+    font-size: 1.1em;
+    float: left;
+    padding: 1em;
+    text-transform: uppercase;
+    text-align: center;
+    width: 20%;
+    color: #454545;
+    cursor: pointer;
+    outline: none;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 0.6s;
+}
+
+ul.site-nav-list li.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+/* Nav Style - End */
+
 
 /* Tab Styles - Start */
 @media (max-width: 950px) {
