Home Scroll Updates

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,8 +5,8 @@
   </div>
   <div class="content-wrapper center-stage">
     <p>     
-    I am a frontend developer with full stack experience by profession and I am an artist and designer by passion. As a
-    developer I mostly work on web and Javascript currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology 
+    I am a frontend developer with full stack experience and also an artist and designer by passion. As a
+    developer I mostly work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology 
     stack. I love creating my own designs and open source components and always keep me involved in proof of concepts and 
     projects on latest technologies.<br/><br/>
     
@@ -16,9 +16,9 @@
     </p>
     <nav>
       <ul class="site-nav-list">
-        <li class="show">MY SKILLS</li>
-        <li class="show">WORK EXPERIENCE</li>
-        <li class="show">TIMELINE</li>
+        <li #navItem>MY SKILLS</li>
+        <li #navItem>WORK EXPERIENCE</li>
+        <li #navItem>TIMELINE</li>
       </ul>
     </nav>
   </div>
