--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="home-content center-stage" [ngClass]="{'hide': !isHeaderFix}">
-  <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=300>
+  <div class="overview art-overview below-view" 
+        appJsOnscroll 
+        [viewportCheck]=true 
+        [restoreInitial]=restoreInitial 
+        [padding]=300
+        (updateSlideIndex)="updateSlideCount($event, 1)">
     <div class="dp overview-dp">
       <h2>Art</h2>
       <div class="alpha-initial-bg">A</div>
@@ -11,7 +16,12 @@
       </div>
     </div>
   </div>
-  <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=300>
+  <div class="overview projects-overview below-view" 
+        appJsOnscroll 
+        [viewportCheck]=true 
+        [restoreInitial]=restoreInitial 
+        [padding]=300 
+        (updateSlideIndex)="updateSlideCount($event, 2)">
     <div class="dp overview-dp">
       <h2>Projects</h2>
       <div class="alpha-initial-bg">w</div>
@@ -23,7 +33,12 @@
       </div>
     </div>
   </div>
-  <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=300>
+  <div class="overview skills-overview below-view" 
+        appJsOnscroll 
+        [viewportCheck]=true 
+        [restoreInitial]=restoreInitial 
+        [padding]=300
+        (updateSlideIndex)="updateSlideCount($event, 3)">
     <div class="dp overview-dp">
       <h2>Blog</h2>
       <div class="alpha-initial-bg">S</div>
@@ -35,7 +50,12 @@
       </div>
     </div>
   </div>
-  <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=300>
+  <div class="overview about-overview below-view" 
+        appJsOnscroll 
+        [viewportCheck]=true 
+        [restoreInitial]=restoreInitial 
+        [padding]=300
+        (updateSlideIndex)="updateSlideCount($event, 4)">
     <div class="dp overview-dp">
       <h2>About</h2>
       <div class="alpha-initial-bg">A</div>
@@ -47,7 +67,12 @@
       </div>
     </div>
   </div>
-  <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [restoreInitial]=restoreInitial [padding]=300>
+  <div class="overview contact-overview below-view" 
+        appJsOnscroll 
+        [viewportCheck]=true 
+        [restoreInitial]=restoreInitial 
+        [padding]=300
+        (updateSlideIndex)="updateSlideCount($event, 5)">
     <div class="dp overview-dp">
       <h2>Contact</h2>
       <div class="alpha-initial-bg">C</div>
