--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,12 +14,43 @@
     portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful and 
     accessible.
     </p>
-    <nav>
-      <ul class="site-nav-list">
-        <li #navItem>MY SKILLS</li>
-        <li #navItem>WORK EXPERIENCE</li>
-        <li #navItem>TIMELINE</li>
-      </ul>
-    </nav>
   </div>
+  <section class="my-skills">
+    <div class="skill-container center-stage">
+      <h2>My Skills</h2>
+      <div class="next-btn"></div>
+      <div class="skill-tiles-container">
+        <ul class="container clearfix">
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+            <div class="skill-tile"></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="my-work-experience">
+    <div class="center-stage">
+      <h2>Work Experience</h2>
+    </div>
+  </section>
+  <section class="my-timeline">
+    <div class="center-stage">
+      <h2>My Timeline</h2>
+    </div>
+  </section>
 </div>
