--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,7 @@ section.background {
 }
 
 .content h1 {
-    padding: 0.2em 0.2em 0.5em;
+    padding: 0.2em 0 0.5em;
     font-size: 3em;
     margin: 0;
     color: #454545;
@@ -34,11 +34,11 @@ section.background {
 }
 
 .content h2 {
-    font-weight: normal;
-    font-size: 1.2em;
-    letter-spacing: 0.05em;
+    font-size: 2em;
+    font-family: Roboto;
+    font-weight: 100;
     margin: 0;
-    padding: 1em 0.5em;
+    padding: 0.8em 0 1em;
 }
 
 .main-footer {
