--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -4,9 +4,6 @@
     margin-left: auto;
     margin-right: auto;
 }
-.content-wrapper {
-    margin-top: 2em;
-}
 .dp {
     position: relative;
     float: left;
@@ -26,11 +23,11 @@ ul {
 }
 p {
     line-height: 1.7em;
-    padding: 0 0.5em;
+    padding: 0 0.5em 2em;
     text-align: justify;
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 1.15em;
+    font-weight: 200;
+    font-size: 1.1em;
     color: #454545;;
 }
 .clearfix:before,
