--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,13 @@
 
 @font-face{
     font-family: "Roboto";
-    src: url("assets/fonts/Roboto-Light.ttf") format('truetype');
+    src: url("assets/fonts/Roboto-Thin.ttf") format('truetype');
     font-weight: 100;
+}
+@font-face{
+    font-family: "Roboto";
+    src: url("assets/fonts/Roboto-Light.ttf") format('truetype');
+    font-weight: 200;
 }
 
 * {
@@ -35,7 +40,6 @@ body::-webkit-scrollbar-thumb
 }
 
 .main-content section {
-    margin: 2em 0;
     min-height: 400px;
 }
 .loading-icon {
