--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,9 @@
-<div class="content about-content">
-  <div class="center-stage">
+<div class="content about-content center-stage">
+  <div class="">
     <h1>About</h1>
     <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
   </div>
-  <div class="content-wrapper center-stage">
+  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <p>     
     I am a frontend developer with full stack experience and also an artist and designer by passion. As a
     developer I mostly work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology 
@@ -15,10 +15,9 @@
     accessible.
     </p>
   </div>
-  <section class="my-skills">
-    <div class="skill-container center-stage">
+  <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+    <div class="skill-container">
       <h2>My Skills</h2>
-      <div class="next-btn"></div>
       <div class="skill-tiles-container">
         <ul class="container clearfix">
           <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
@@ -43,13 +42,13 @@
       </div>
     </div>
   </section>
-  <section class="my-work-experience">
-    <div class="center-stage">
+  <section class="my-work-experience" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+    <div class="experience-container">
       <h2>Work Experience</h2>
     </div>
   </section>
   <section class="my-timeline">
-    <div class="center-stage">
+    <div class="timeline-container" appJsOnscroll [viewportCheck]=true [padding]=100>
       <h2>My Timeline</h2>
     </div>
   </section>
