--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -8,6 +8,7 @@
 
 .content section h2 {
     color: #FFFFFF;
+    font-family: Playfair Display;
     padding-left: 0;
     border-bottom: thin dotted;
     margin-bottom: 1em;
