--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,7 +17,7 @@
   </div>
   <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
     <div class="skill-container">
-      <h2>My Skills</h2>
+      <h2>Skills</h2>
       <div class="skill-tiles-container">
         <ul class="container clearfix">
           <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
