--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,7 +38,7 @@ section.background {
     font-family: Roboto;
     font-weight: 100;
     margin: 0;
-    padding: 0.8em 0 1em;
+    padding: 25px 0;
 }
 
 .main-footer {
