--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,39 +4,30 @@
     <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
   </div>
   <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <p>     
-    I am a frontend developer with full stack experience and also an artist and designer by passion. As a
-    developer I mostly work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology 
-    stack. I love creating my own designs and open source components and always keep me involved in proof of concepts and 
-    projects on latest technologies.<br/><br/>
-    
-    Designing has always been with me even before I started loving technology. I use to design products as well along with
-    portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful and 
-    accessible.
+    <p>
+      I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer I mostly
+      work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love creating
+      my own designs and open source components and always keep me involved in proof of concepts and projects on latest technologies.<br/><br/>      Designing has always been with me even before I started loving technology. I use to design products as well along with
+      portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful
+      and accessible.
     </p>
   </div>
-  <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+  <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
     <div class="skill-container">
       <h2>Skills</h2>
       <div class="skill-tiles-container">
-        <ul class="container clearfix">
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
+        <ul class="clearfix">
+          <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div #skillItem class="skill-wrapper angular hide"></div>
           </li>
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
+          <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div #skillItem class="skill-wrapper js hide"></div>
           </li>
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
+          <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div #skillItem class="skill-wrapper ts hide"></div>
           </li>
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
-          </li>
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
-          </li>
-          <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-            <div class="skill-tile"></div>
+          <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <div #skillItem class="skill-wrapper html hide"></div>
           </li>
         </ul>
       </div>
