--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -11,13 +11,13 @@
     height: 100%;
     border: thin solid #e3e3e3;
     opacity: 1;
-    transform: translateY(0);
+    transform: translate3d(0, 0, 0);
     transition: opacity 0.5s, transform 0.8s;
 }
 
 .art-list img.hide {
     opacity: 0;
-    transform: translateY(200px);
+    transform: translate3d(0, 200px, 0);
 }
 
 /* For Phones - Start */
