--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,11 +31,11 @@
     color: #FFFFFF;
     padding: 35px 0;
     text-align: center;
-    transform: translateY(0);
+    transform: translate3d(0, 0, 0);
     transition: transform 1.5s;
 }
 .overview.below-view h2 {
-    transform: translateY(50px);
+    transform: translate3d(0, 50px, 0);
 }
 .overview .alpha-initial-bg {
     position: absolute;
