--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,7 @@
   </div>
   <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
     <div class="skill-container">
-      <h2>Skills</h2>
+      <h2>Tech Skills</h2>
       <div class="skill-tiles-container">
         <ul class="clearfix">
           <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
@@ -31,11 +31,41 @@
           </li>
         </ul>
       </div>
+      <p appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
+        I am current working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base web
+        technologies. I have also experience in working with Ionic and Firebase.
+      </p>
     </div>
   </section>
   <section class="my-work-experience" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
     <div class="experience-container">
       <h2>Work Experience</h2>
+      <div class="exp-container">
+        <ul>
+          <li>
+            <div #expItem class="exp-wrapper clearfix">
+              <div class="logo-wrapper col-md-4 col-lg-4">
+                <img src="assets/sgm-logo.png" />
+              </div>
+              <div class="exp-summary col-md-8 col-lg-8">
+                <h3>Sapient Global Markets</h3>
+                <div class="time">Oct, 2016 - present</div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div #expItem class="exp-wrapper clearfix">
+              <div class="logo-wrapper col-md-4 col-lg-4">
+                  <img src="assets/tcs-logo.png" />
+              </div>
+              <div class="exp-summary col-md-8 col-lg-8">
+                  <h3>Tata Consultancy Services</h3>
+                  <div class="time">March, 2012 - Sep, 2016</div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
   <section class="my-timeline">
