--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -44,10 +44,10 @@
         <ul>
           <li>
             <div #expItem class="exp-wrapper clearfix">
-              <div class="logo-wrapper col-md-4 col-lg-4">
+              <div class="logo-wrapper col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <img src="assets/sgm-logo.png" />
               </div>
-              <div class="exp-summary col-md-8 col-lg-8">
+              <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
                 <h3>Sapient Global Markets</h3>
                 <div class="time">Oct, 2016 - present</div>
               </div>
@@ -55,10 +55,10 @@
           </li>
           <li>
             <div #expItem class="exp-wrapper clearfix">
-              <div class="logo-wrapper col-md-4 col-lg-4">
+              <div class="logo-wrapper col-xs-4 col-sm-4 col-md-4 col-lg-4">
                   <img src="assets/tcs-logo.png" />
               </div>
-              <div class="exp-summary col-md-8 col-lg-8">
+              <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
                   <h3>Tata Consultancy Services</h3>
                   <div class="time">March, 2012 - Sep, 2016</div>
               </div>
@@ -68,9 +68,9 @@
       </div>
     </div>
   </section>
-  <section class="my-timeline">
+  <!-- <section class="my-timeline">
     <div class="timeline-container" appJsOnscroll [viewportCheck]=true [padding]=100>
-      <h2>My Timeline</h2>
+      <h2>Education</h2>
     </div>
-  </section>
+  </section> -->
 </div>
