--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
     <div class="skill-container">
       <h2>Tech Skills</h2>
       <div class="skill-tiles-container">
-        <ul class="clearfix">
+        <ul class="clearfix skill-list">
           <li class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div #skillItem class="skill-wrapper angular hide"></div>
           </li>
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </div>
-      <p appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
+      <p class="sub-desc" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
         I am current working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base web
         technologies. I have also experience in working with Ionic and Firebase.
       </p>
@@ -50,6 +50,11 @@
               <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
                 <h3>Sapient Global Markets</h3>
                 <div class="time">Oct, 2016 - present</div>
+                <p>
+                  I worked as Senior Interactive Developer for Wells Fargo Bank.
+                  I used this opportunity to design and develop apps that qualify the web accessibilty specifications 
+                  and fulfill the user experience guidelines. Here I worked on custom web widgets based on YUI and Angular SPAs.
+                </p>
               </div>
             </div>
           </li>
@@ -61,6 +66,14 @@
               <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
                   <h3>Tata Consultancy Services</h3>
                   <div class="time">March, 2012 - Sep, 2016</div>
+                  <p>
+                    I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked 
+                    as Java Developer but worked on multiple technologies inclusing PHP, shell scripting, 
+                    frontend stuff and lot more ebing on a support and enhancement project with DexMedia.
+                    Due to interest in design and frontend stuff I choose to move to a more of a frontend
+                    role and worked as a IT Analyst for Pearson where I worked on mutiple Angular and OOJS
+                    projects.
+                  </p>
               </div>
             </div>
           </li>
