--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -23,7 +23,7 @@ ul {
 }
 p {
     line-height: 1.7em;
-    padding: 0 0.5em 2em;
+    padding: 0 0 2em;
     text-align: justify;
     font-family: 'Roboto', sans-serif;
     font-weight: 200;
