--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -37,6 +37,21 @@ p {
     clear: both;
 }
 /* Button Styles - Start */
+.button-wrapper {
+    display: inline-block;
+    position: relative;
+}
+.button-wrapper .background {
+    height: 100%;
+    position: absolute;
+    width: 0;
+    -webkit-transition: width 0.2s ease-in;
+    -moz-transition: width 0.2s ease-in;
+    transition: width 0.2s ease-in;
+}
+.button-wrapper:hover .background {
+    width: 100%;
+}
 button {
     position: relative;
     display: block;
@@ -46,6 +61,7 @@ button {
     margin: auto;
     font-family: 'Playfair Display', serif;
     letter-spacing: 4px;
+    cursor: pointer;
 }
 /* Button Styles - End */
 
@@ -56,6 +72,8 @@ ul.site-nav-list {
     height: 10em;
     margin: 0 auto;
     padding: 5em 0 2em;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
     transition: all 0.5s ease-in;
 }
 
@@ -70,7 +88,12 @@ ul.site-nav-list li {
     cursor: pointer;
     outline: none;
     opacity: 0;
+    -webkit-transform: translateY(20px);
+    -moz-transform: translateY(20px);
+    -ms-transform: translateY(20px);
     transform: translateY(20px);
+    -webkit-transition: opacity 0.5s, transform 0.6s;
+    -moz-transition: opacity 0.5s, transform 0.6s;
     transition: opacity 0.5s, transform 0.6s;
 }
 
@@ -104,23 +127,38 @@ ul.site-nav-list li.show {
 
 /* Scroll Directive Styles - Start */
 [appJsOnscroll] {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
     transform: translateY(0);
     transition: transform 0.7s ease-out, opacity 0.7s;
     opacity: 1;
 }
 .below-view {
+    -webkit-transform: translateY(100px);
+    -moz-transform: translateY(100px);
+    -ms-transform: translateY(100px);
    transform: translateY(100px);
    opacity: 0;
 }
 .above-view {
+    -webkit-transform: translateY(-100px);
+    -moz-transform: translateY(-100px);
+    -ms-transform: translateY(-100px);
    transform: translateY(-100px);
    opacity: 0;
 }
 .overview.below-view {
+    -webkit-transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -ms-transform: translateY(200px);
    transform: translateY(200px);
    opacity: 0;
 }
 .overview.above-view {
+    -webkit-transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -ms-transform: translateY(200px);
    transform: translateY(-200px);
    opacity: 0;
 }
