Header Style update and Blog compoenet addition

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -41,6 +41,41 @@ section.background {
     padding: 25px 0;
 }
 
+.content .main h2 {
+    font-size: 2em;
+    font-family: Playfair Display;
+    font-weight: 100;
+    margin: 0;
+    padding: 25px 0;
+    width: 40%;
+    float: left;
+    color: #FFFFFF;
+    padding: 25px;
+    margin: 21px 21px 21px 0;
+    line-height: 1.5em;
+    min-height: 10em;
+}
+
+.content.art-content .main h2 {
+    background: linear-gradient(140deg, #f31b48, #c6116b);
+}
+
+.content.projects-content .main h2 {
+    background: linear-gradient(140deg, #c6116b, #940590);
+}
+
+.content.blog-content .main h2 {
+    background: linear-gradient(140deg, #940590, #28a6e4);
+}
+
+.content.about-content .main h2 {
+    background: linear-gradient(140deg, #28a6e4, #0ab779);
+}
+
+.content.contact-content .main h2 {
+    background: linear-gradient(140deg, #0ab779, #0ab732);
+}
+
 .main-footer {
     position: relative;
     width: 100%;
@@ -77,6 +112,10 @@ section.background {
     }
     .main-content.fix-header {
         margin-top: 31em;
+    }
+    .content .main h2 {
+        width: 100%;
+        min-height: 4em;
     }
 }
 /* Tab Styles - End */
