--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,13 +1,13 @@
-<div class="content art-content">
+<div class="content art-content center-stage">
   <div>
-    <div class="center-stage">
+    <div class="main">
       <h1>Art</h1>
       <h2>A collection of my sketches and paintings</h2>
     </div>
     <div class="content-wrapper">
       <div class="side-info">
       </div>
-      <div class="list-wrapper center-stage" 
+      <div class="list-wrapper" 
            appImageOnLoad 
            [imageItems]="imageItems" 
            (progress)="updateProgress($event)" 
