--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
-<div class="content contact-content">
-  <div class="center-stage">
+<div class="content contact-content center-stage">
+  <div class="main">
     <h1>Contact</h1>
+    <h2>Send me an email here</h2>
   </div>
 </div>
