--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="content about-content center-stage">
-  <div class="">
+  <div class="main">
     <h1>About</h1>
     <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
   </div>
