--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -313,7 +313,7 @@ h1.name {
     left: 20%;
     width: 20%;
 }
-.nav-highlighter.skills {
+.nav-highlighter.blog {
     background: #940590;
     left: 40%;
     width: 20%;
