--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -35,7 +35,7 @@
         <ul class="site-nav-list">
             <li #navItem (mouseenter)="activeNav='art'" (mouseleave)="activeNav=''" routerLink="/art" (click)="showMenu = false;">Art</li>
             <li #navItem (mouseenter)="activeNav='projects'" (mouseleave)="activeNav=''" routerLink="/projects" (click)="showMenu = false;">Projects</li>
-            <li #navItem (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''" routerLink="/home" (click)="showMenu = false;">Blog</li>
+            <li #navItem (mouseenter)="activeNav='blog'" (mouseleave)="activeNav=''" routerLink="/blog" (click)="showMenu = false;">Blog</li>
             <li #navItem (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''" routerLink="/about" (click)="showMenu = false;">About</li>
             <li #navItem (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''" routerLink="/contact" (click)="showMenu = false;">Contact</li>
         </ul>
